# StaleBench

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: plot_recovery.py  plot_results.py
examples/: custom_system.py
notebooks/: demo.ipynb
paper/: paper.bib  paper.md
results/: LICENSE  RESULTS.md
results/raw/: deep.jsonl  knob.jsonl  recency_fix.jsonl  retriever.jsonl  sensitivity.jsonl
stalebench/: __init__.py  __main__.py  corpus.py  metrics.py  runner.py  system.py
stalebench/backends/: __init__.py  openai_compat.py
stalebench/reference/: __init__.py  reference_rag.py
tests/: test_checker.py  test_ruler.py
