[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stalebench"
version = "0.1.0"
description = "A benchmark for answer-freshness in Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Karan Singh" }]
keywords = ["RAG", "retrieval-augmented-generation", "benchmark", "freshness", "evaluation", "LLM"]
dependencies = ["numpy>=1.24", "scikit-learn>=1.3", "openai>=1.0"]

[project.optional-dependencies]
dense = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0"]

[project.scripts]
stalebench = "stalebench.__main__:main"

[tool.setuptools.packages.find]
include = ["stalebench*"]
